# StarRailAPI-minimum

./: Cargo.toml  README.md
src/: lib.rs
src/client/: cache.rs  client.rs  mod.rs  routes.rs
src/client/component/: base.rs
src/client/component/chronicle/: client.rs  genshin.rs  honkai.rs  starrail.rs
src/client/manager/: managers.rs
src/model/hoyolab/: record.rs
src/model/starrail/chronicle/: challenge.rs  rogue.rs
src/util/: constants.rs  kwargs.rs  mod.rs  types.rs  uid.rs
