[package]
name = "miHoYo-API-Wrapper"
version = "0.1.0"
edition = "2021"

[features]
default = ["starrail"]
genshin = []
honkai = []
starrail = []
full = [
    "genshin",
    "honkai",
    "starrail",
]


[dependencies]
async-trait = "0.1.72"
anyhow = "1.0.72"
dotenv = "0.15.0"
once_cell = "1.18.0"
serde = { version = "1.0.182", features = ["derive"] }
serde_json = "1.0.104"
rand = "0.8.5"
rust-crypto = "*"

[dependencies.reqwest]
version = "0.11.7"
features = [
    "json",
    "multipart",
    "stream",
    "cookies"
]

[dependencies.tokio]
version = "1.29.1"
features = ["full"]